# saccade

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  flake.nix  pyproject.toml
apps/research-agent/: AGENTS.md  PLAN.md  pyproject.toml
apps/research-agent/scripts/: __init__.py  helpers.py
apps/research-agent/scripts/scenarios/: 01_simple_conversation.py  02_single_tool_call.py  03_parallel_tool_calls.py  04_multi_turn_conversation.py  05_chained_tool_calls.py  __init__.py
apps/research-agent/src/research_agent/memory/: __init__.py  working.py
apps/research-agent/src/research_agent/tools/: __init__.py  registry.py
apps/research-agent/tests/unit/memory/: test_working.py
apps/research-agent/tests/unit/tools/: test_registry.py
scripts/: custom_openai_provider.py  test_contextvar_propagation.py
src/cadence/: __init__.py
src/cadence/primitives/: AGENTS.md  __init__.py  bus.py  projectors.py  span.py  trace.py
src/saccade/: __init__.py
src/saccade/primitives/: events.py  span.py
tests/e2e/: test_dx_patterns.py
tests/integration/: test_pipeline.py
tests/unit/primitives/: test_bus.py  test_events.py  test_metrics.py  test_projections.py  test_span.py  test_trace.py
