[project]
name = "research-agent"
version = "0.1.0"
description = "Autonomous research agent - dogfooding saccade"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "saccade",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
saccade = { workspace = true }
