[project]
name = "research-agent"
version = "0.1.0"
description = "Autonomous research agent - dogfooding saccade"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "saccade",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
saccade = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",        # pydocstyle (enable selectively if needed)
    "COM812",   # trailing comma (formatter conflict)
    "ISC001",   # string concat (formatter conflict)
    "ANN401",   # Dynamically typed Any
    "TD002",    # Missing TODO author
    "TD003",    # Missing TODO link
    "FIX002",   # Line contains TODO
    "TRY003",   # long exception messages (acceptable for internal lib)
    "EM101",    # exception string literal
    "EM102",    # exception f-string literal
    "C901",     # function too complex (type coercion is inherently complex)
    "PLR0911",  # too many return statements
    "PLR0912",  # too many branches
    "TRY300",   # else block for try (less readable for try-until-success pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # assert usage
    "PLR2004",  # magic values
    "ANN",      # type annotations
    "D",        # docstrings
    "PLC0415",  # import not at top-level
    "SLF001",   # private member access
    "PT011",    # pytest.raises too broad
    "TRY003",   # long exception messages
    "EM101",    # exception string literal
    "ARG001",   # unused function argument
    "I001",     # import sorting (tests do local imports intentionally)
    "PIE790",   # unnecessary ... literal
    "FBT001",   # boolean positional arg
    "FBT002",   # boolean default positional arg
    "A002",     # shadowing builtin (e.g., filter=)
    "UP045",    # Optional vs X | None
    "UP007",    # Union vs X | Y
    "RUF043",   # regex pattern in match=
    "PT018",    # compound assertion
    "SIM117",   # nested with statements
    "N802",     # function name should be lowercase
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: unit tests (isolated component tests)",
    "integration: integration tests (multi-component tests)",
    "e2e: end-to-end tests (full system tests)",
]
filterwarnings = [
    "ignore:Tool executed with no active span:UserWarning",
    "ignore:Field name.*shadows an attribute in parent.*:UserWarning",
]
